# UXDC_DRVMServer

./: .gitignore  CMakeLists.txt  README.md  ReceiveDRVMPackage.py  UXDC_DRVMWebServer.py  UXDC_DRVM_pb2.py
include/: BaslerCamera.h  CamParameters.h  DeviceParameters.h  GeneralParameters.h
protobuf/: UXDC_DRVM.proto
src/: BaslerCamera.cpp  CamParameters.cpp  DeviceParameters.cpp  GeneralParameters.cpp  Grab.cpp
